--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,8 @@ jobs:
     - name: Zip Resource Pack
       run: zip -r swordcraftonline_resource_pack.zip .
 
+    - name: Add secret to key ring
+      run: ssh-add - <<< "${{ secrets.CDN_INGRESS_KEY }}"
+    
     - name: Push to CDN
-      uses: appleboy/scp-action@v0.0.1
-      with:
-        local: swordcraftonline_resource_pack.zip
-        host: ${{ secrets.CDN_INGRESS }}
-        port: ${{ secrets.CDN_INGRESS_PORT }}
-        remote: ${{ secrets.CDN_PATH }}
-        user: ${{ secrets.CDN_INGRESS_USER }}
-        key: ${{ secrets.CDN_INGRESS_KEY }}
+      run: scp -o StrictHostKeyChecking=no -v -P "${{ secrets.CDN_INGRESS_PORT }}" -r swordcraftonline_resource_pack.zip "${{ secrets.CDN_INGRESS_USER }}"@"${{ secrets.CDN_INGRESS }}":"${{ secrets.CDN_PATH }}"
