--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
       run: zip -r swordcraftonline_resource_pack.zip .
 
     - name: Add secret to key ring
-      run: ssh-add - <<< "${{ secrets.CDN_INGRESS_KEY }}"
+      run: |
+        eval "$(ssh-agent -s)"
+        ssh-add - <<< "${{ secrets.CDN_INGRESS_KEY }}"
     
     - name: Push to CDN
       run: scp -o StrictHostKeyChecking=no -v -P "${{ secrets.CDN_INGRESS_PORT }}" -r swordcraftonline_resource_pack.zip "${{ secrets.CDN_INGRESS_USER }}"@"${{ secrets.CDN_INGRESS }}":"${{ secrets.CDN_PATH }}"
