--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,9 @@ jobs:
 
     - name: Zip Resource Pack
       run: zip -r swordcraftonline_resource_pack.zip .
-
-    - name: Add secret to key ring
+    
+    - name: Push to CDN
       run: |
         eval "$(ssh-agent -s)"
         ssh-add - <<< "${{ secrets.CDN_INGRESS_KEY }}"
-    
-    - name: Push to CDN
-      run: scp -o StrictHostKeyChecking=no -v -P "${{ secrets.CDN_INGRESS_PORT }}" -r swordcraftonline_resource_pack.zip "${{ secrets.CDN_INGRESS_USER }}"@"${{ secrets.CDN_INGRESS }}":"${{ secrets.CDN_PATH }}"
+        scp -o StrictHostKeyChecking=no -v -P "${{ secrets.CDN_INGRESS_PORT }}" -r swordcraftonline_resource_pack.zip "${{ secrets.CDN_INGRESS_USER }}"@"${{ secrets.CDN_INGRESS }}":"${{ secrets.CDN_PATH }}"
