Try another way

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,9 @@ jobs:
         ssh-add - <<< "${{ secrets.CDN_INGRESS_KEY }}"
         scp -o StrictHostKeyChecking=no -v -P "${{ secrets.CDN_INGRESS_PORT }}" -r swordcraftonline_resource_pack.zip hash.sha1 "${{ secrets.CDN_INGRESS_USER }}"@"${{ secrets.CDN_INGRESS }}":"${{ secrets.CDN_PATH }}"
 
+    - name: Get commit message
+      run: echo ::set-env name=commitmsg::$(git log --format=%B -n 1 ${{ github.event.after }})
     - name: Send build notification
       run: |
-        echo ::set-env name=commitmsg::$(git log --format=%B -n 1 ${{ github.event.after }})
-        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit `$commitmsg`.\"}"
+        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d '{ "username": "${{ github.actor }}", "content": "Deployed resource pack at commit `${{ env.commitmsg }}`."}'
         
