--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
 
     - name: Get commit message
       run: echo ::set-env name=commitmsg::$(git log --format=%B -n 1 ${{ github.event.after }})
+    - name: Debug
+      run: |
+        echo "DEBUG: $commitmsg"
     - name: Send build notification
       run: |
         curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit \`$commitmsg\`.\"}"
