Try including the hash in the message

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
       run: zip -r swordcraftonline_resource_pack.zip .
     
     - name: Calculate SHA1 hash
-      id: hashpack
-      run: sha1sum swordcraftonline_resource_pack.zip > hash.sha1
+      run: HASH=`sha1sum swordcraftonline_resource_pack.zip` | echo $HASH > hash.sha1
     
     - name: Push to CDN
       run: |
@@ -34,8 +33,8 @@ jobs:
         scp -o StrictHostKeyChecking=no -v -P "${{ secrets.CDN_INGRESS_PORT }}" -r swordcraftonline_resource_pack.zip hash.sha1 "${{ secrets.CDN_INGRESS_USER }}"@"${{ secrets.CDN_INGRESS }}":"${{ secrets.CDN_PATH }}"
 
     - name: Get commit message
-      run: echo ::set-env name=commitmsg::$(git log --format=%B -n 5)
+      run: echo ::set-env name=commitmsg::$(git log --format=%B -n 1)
     - name: Send build notification
       run: |
-        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit \`\`\`$commitmsg\`\`\`\"}"
+        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit \`$commitmsg\`. \`\`\`$HASH\`\`\` "}"
         
