--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
       run: echo ::set-env name=commitmsg::$(git log --format=%B -n 1)
     - name: Send build notification
       run: |
-        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit \`$commitmsg\`. \`\`\`$HASH\`\`\` "}"
+        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit \`$commitmsg\`. \`\`\`$HASH\`\`\` \"}"
         
