--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
       run: zip -r swordcraftonline_resource_pack.zip .
     
     - name: Calculate SHA1 hash
-      run: HASH=`sha1sum swordcraftonline_resource_pack.zip` | echo $HASH > hash.sha1
+      run: |
+        sha1sum swordcraftonline_resource_pack.zip > hash.sha1
     
     - name: Push to CDN
       run: |
@@ -36,5 +37,5 @@ jobs:
       run: echo ::set-env name=commitmsg::$(git log --format=%B -n 1)
     - name: Send build notification
       run: |
-        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit \`$commitmsg\`. \`\`\`$HASH\`\`\` \"}"
+        curl -X POST ${{ secrets.NOTIFY_URL }} -H "Content-Type: application/json" -d "{ \"username\": \"${{ github.actor }}\", \"content\": \"Deployed resource pack at commit \`$commitmsg\`. \`\`\`$(<hash.sha1)\`\`\` \"}"
         
